pushing branch to github to fix feature branch behind master

--- a/app/assets/stylesheets/registered_applications.scss
+++ b/app/assets/stylesheets/registered_applications.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the welcome controller here.
+// Place all the styles related to the RegisteredApplicationsController controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.col-md-4 {
-    font-weight: bold;
-}
